--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "test": "ng test",
+    "test": "ng test --single-run",
+    "watch-test": "ng test --sourcemap=true",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
